// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AppInstallSuccesModalContent should match a snapshot where app is  directApi 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="el-snack-holder"
      />
      <p
        class="el-has-grey-text el-body-text"
      >
        will-test-dev-co-voracious-person
         integration has been successfully enabled.
      </p>
      <p
        class="el-has-grey-text el-body-text"
      >
        For details on how to use the integration and, if there are any additional setup requirements, a member of
         
        MOCK_DEVELOPER_NAME
         will be in touch to help you through the process.
      </p>
      <p
        class="el-has-grey-text el-body-text"
      >
        If you wish to contact them directly, you can do this via telephone at 
        07777777777
         or email at
         
        <a
          href="mailto:foo@bar.com"
          rel="noopener noreferrer"
          target="_blank"
        >
          foo@bar.com
        </a>
        .
      </p>
      <div
        class="el-button-group"
      >
        <div
          class="el-button-group-align-center el-button-group-inner"
        >
          <button
            class="el-intent-low el-button-fixed-width el-button"
          >
            Back To App
            <div
              class="el-button-loader"
            />
          </button>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="el-snack-holder"
    />
    <p
      class="el-has-grey-text el-body-text"
    >
      will-test-dev-co-voracious-person
       integration has been successfully enabled.
    </p>
    <p
      class="el-has-grey-text el-body-text"
    >
      For details on how to use the integration and, if there are any additional setup requirements, a member of
       
      MOCK_DEVELOPER_NAME
       will be in touch to help you through the process.
    </p>
    <p
      class="el-has-grey-text el-body-text"
    >
      If you wish to contact them directly, you can do this via telephone at 
      07777777777
       or email at
       
      <a
        href="mailto:foo@bar.com"
        rel="noopener noreferrer"
        target="_blank"
      >
        foo@bar.com
      </a>
      .
    </p>
    <div
      class="el-button-group"
    >
      <div
        class="el-button-group-align-center el-button-group-inner"
      >
        <button
          class="el-intent-low el-button-fixed-width el-button"
        >
          Back To App
          <div
            class="el-button-loader"
          />
        </button>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`AppInstallSuccesModalContent should match a snapshot where app not directApi 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="el-snack-holder"
      />
      <p
        class="el-body-text"
      >
        The 
        will-test-dev-co-voracious-person
         app has been successfully installed. You can now launch the app from the ‘My Apps’ page or by clicking the button below.
      </p>
      <p
        class="el-body-text"
      >
        If you wish to contact the developer about using the app, you can do this via telephone at 
        07777777777
         or email at
         
        <a
          href="mailto:foo@bar.com"
          rel="noopener noreferrer"
          target="_blank"
        >
          foo@bar.com
        </a>
        .
      </p>
      <div
        class="el-button-group"
      >
        <div
          class="el-button-group-align-center el-button-group-inner"
        >
          <button
            class="el-intent-low el-button-fixed-width el-button"
          >
            Back To App
            <div
              class="el-button-loader"
            />
          </button>
          <a
            href="https://foo.bar"
            rel="noopener noreferrer"
            target="_blank"
          >
            <button
              class="el-intent-primary el-button"
              type="button"
            >
              Launch App
              <div
                class="el-button-loader"
              />
            </button>
          </a>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="el-snack-holder"
    />
    <p
      class="el-body-text"
    >
      The 
      will-test-dev-co-voracious-person
       app has been successfully installed. You can now launch the app from the ‘My Apps’ page or by clicking the button below.
    </p>
    <p
      class="el-body-text"
    >
      If you wish to contact the developer about using the app, you can do this via telephone at 
      07777777777
       or email at
       
      <a
        href="mailto:foo@bar.com"
        rel="noopener noreferrer"
        target="_blank"
      >
        foo@bar.com
      </a>
      .
    </p>
    <div
      class="el-button-group"
    >
      <div
        class="el-button-group-align-center el-button-group-inner"
      >
        <button
          class="el-intent-low el-button-fixed-width el-button"
        >
          Back To App
          <div
            class="el-button-loader"
          />
        </button>
        <a
          href="https://foo.bar"
          rel="noopener noreferrer"
          target="_blank"
        >
          <button
            class="el-intent-primary el-button"
            type="button"
          >
            Launch App
            <div
              class="el-button-loader"
            />
          </button>
        </a>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`AppInstallSuccesModalContent should match a snapshot where in desktop mode 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="el-snack-holder"
      />
      <p
        class="el-body-text"
      >
        The 
        will-test-dev-co-voracious-person
         app has been successfully installed. You can now launch the app from the ‘My Apps’ page or by clicking the button below.
      </p>
      <p
        class="el-body-text"
      >
        If you wish to contact the developer about using the app, you can do this via telephone at 
        07777777777
         or email at
         
        <a
          href="mailto:foo@bar.com"
          rel="noopener noreferrer"
          target="_blank"
        >
          foo@bar.com
        </a>
        .
      </p>
      <div
        class="el-button-group"
      >
        <div
          class="el-button-group-align-center el-button-group-inner"
        >
          <button
            class="el-intent-low el-button-fixed-width el-button"
          >
            Back To App
            <div
              class="el-button-loader"
            />
          </button>
          <a
            href="https://foo.bar"
            rel="noopener noreferrer"
            target="_blank"
          >
            <button
              class="el-intent-primary el-button"
              type="button"
            >
              Launch App
              <div
                class="el-button-loader"
              />
            </button>
          </a>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="el-snack-holder"
    />
    <p
      class="el-body-text"
    >
      The 
      will-test-dev-co-voracious-person
       app has been successfully installed. You can now launch the app from the ‘My Apps’ page or by clicking the button below.
    </p>
    <p
      class="el-body-text"
    >
      If you wish to contact the developer about using the app, you can do this via telephone at 
      07777777777
       or email at
       
      <a
        href="mailto:foo@bar.com"
        rel="noopener noreferrer"
        target="_blank"
      >
        foo@bar.com
      </a>
      .
    </p>
    <div
      class="el-button-group"
    >
      <div
        class="el-button-group-align-center el-button-group-inner"
      >
        <button
          class="el-intent-low el-button-fixed-width el-button"
        >
          Back To App
          <div
            class="el-button-loader"
          />
        </button>
        <a
          href="https://foo.bar"
          rel="noopener noreferrer"
          target="_blank"
        >
          <button
            class="el-intent-primary el-button"
            type="button"
          >
            Launch App
            <div
              class="el-button-loader"
            />
          </button>
        </a>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
